applications/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: applications
spec:
  type: ClusterIP
  selector:
    app: infisical
  ports:
    - name: http
      port: 80
      targetPort: 8080
