applications/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical
  namespace: applications
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - infisical.perch-humboldt.ts.net
      secretName: infisical-tls-cert
  rules:
    - host: infisical.perch-humboldt.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical
                port:
                  name: http
